--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Property Information Form</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css">-->
+    <link rel="stylesheet" href="https://julius-altmann-3333.github.io/altmann-investments/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+    <script src="https://julius.altmann-3333.github.io/altmann-investments/script.js"></script>
     <style>
         
     </style>
 </head>
 <body>
-
+    <img src="https://julius-altmann-3333.github.io/altmann-investments/images/1.png">
+    <a href="https://julius-altmann-3333.github.io/altmann-investments/files/file.pdf">Download File</a>
     <h2>Property Information Form</h2>
     <form id="propertyForm">
         <label for="propertyAddress">Property Address:</label>
